--- a/FlaskWebProject1/FlaskWebProject1/templates/layout.html
+++ b/FlaskWebProject1/FlaskWebProject1/templates/layout.html
@@ -13,6 +13,8 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container" style="float:right;">
             <br />
+           <a href="/home">Home</a>
+            &nbsp; &nbsp;
            <a href="/">Log Out</a>
             <br />
             <br />
