--- a/FlaskWebProject1/FlaskWebProject1/templates/AddPayment.html
+++ b/FlaskWebProject1/FlaskWebProject1/templates/AddPayment.html
@@ -7,13 +7,13 @@
         <div class="col-md-18">
             <div class="panel panel-info">
                 <div class="panel-heading">
-                    Last Payments
+                    Add Payment
                 </div>
                 <div class="panel-body">
                     <form action="/AddPayment" method="post">
                         <div class="form-group">
                             <label for="Name">Name:</label>
-                            <input type="text" class="form-control" id="Name" name="Name">
+                            <input type="text" class="form-control" id="Name" name="Name" onchange="validAllInputs()">
                         </div>
                         <div class="form-group">
                             <label for="Date">Date:</label>
@@ -63,23 +63,23 @@
 
                         <div class="form-group">
                             <label for="AmountPayed">Amount Payed:</label>
-                            <input type="text" class="form-control" id="AmountPayed" name="AmountPayed">
+                            <input type="text" class="form-control" id="AmountPayed" name="AmountPayed" onchange="validAllInputs()">
                         </div>
 
                         <div class="form-group">
                             <label for="Hours">Hours:</label>
-                            <input type="text" class="form-control" id="Hours" name="Hours">
+                            <input type="text" class="form-control" id="Hours" name="Hours" onchange="validAllInputs()">
                         </div>
 
                         <div class="form-group">
                             <label for="Debt">Debt:</label>
-                            <input type="text" class="form-control" id="Debt" name="Debt">
+                            <input type="text" class="form-control" id="Debt" name="Debt" onchange="validAllInputs()">
                         </div>
 
                         <div class="checkbox">
                             <label><input type="checkbox" name="Receipt" id="Receipt"> Receipt</label>
                         </div>
-                        <button type="submit" class="btn btn-default">Submit</button>
+                        <button type="submit" class="btn btn-default" id="submit" name="submit">Submit</button>
                     </form>
                 </div>
             </div>
