--- a/FlaskWebProject1/FlaskWebProject1/templates/Home2.html
+++ b/FlaskWebProject1/FlaskWebProject1/templates/Home2.html
@@ -19,6 +19,10 @@
 })();
 </script>
 {% endif %}
+{% if error_message %}
+    <script>alert("User is already exist");</script>
+{% endif %}
+
 <div class="container">
     <div class="col-md-offset-0">
         <div class="col-md-18">
@@ -63,9 +67,9 @@
                             <td> {{ payment_data[i]["Hours"] }}</td>
                             <td> {{ payment_data[i]["Debt"] }}</td>
                             {% if payment_data[i]["Receipt"] == "on"%}
-                                <td>V</td>
+                                <td style="color:#008000;font-weight:bold;">V</td>
                             {% else %}
-                                <td>X</td>
+                                <td style="color:red;font-weight:bold;">X</td>
                             {% endif %}
 
 
