--- a/PaymentManager/FlaskWebProject1/templates/Home2.html
+++ b/PaymentManager/FlaskWebProject1/templates/Home2.html
@@ -53,6 +53,7 @@
                             {% for key in payment_keys %}
                             <th>{{key}}</th>
                             {% endfor %}
+                            <th>Send Receipt</th>
                             <th>Edit</th>
                             <th>Delete</th>
                         </tr>
@@ -74,7 +75,7 @@
 
 
                              
-
+                            <td align="center"><a href="/send_receipt?name={{payment_data[i]['Name']}}"><img src="{{ url_for('static', filename='img/receipt-icon.png')}}" heigth="30" width="30" /></a></td>
                             <td><a href="/edit?name={{payment_data[i]['Name']}}"><img src="{{ url_for('static', filename='img/edit-icon.png')}}" heigth="30" width="30" /></a></td>
                             <td><a href="/delete?name={{payment_data[i]['Name']}}"><img src="{{ url_for('static', filename='img/delete-icon.png')}}" heigth="30" width="30" /></a></td>
                         </tr>
